# ComputerSoftware

./: .gitignore  .gitmodules  Readme.md
DesktopEmulator/: CMakeLists.txt  CMakePresets.json
DesktopEmulator/CMakeModules/: FindSDL2.cmake  FindSDL2_image.cmake
DesktopEmulator/CMakeModules/toolchains/: mingw32.toolchain  mingw64.toolchain
DesktopEmulator/ConsoleLogic/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.hpp  CMakeLists.txt  ExternalInterfaces.cpp  ExternalInterfaces.hpp  V32Buses.cpp  V32Buses.hpp  V32CPU.cpp  V32CPU.hpp  V32CPUProcessors.cpp  V32CartridgeController.cpp  V32CartridgeController.hpp  V32Console.cpp  V32Console.hpp  V32GPU.cpp  V32GPU.hpp  V32GPUWriters.cpp  V32GamepadController.cpp  V32GamepadController.hpp  V32Memory.cpp  V32Memory.hpp  V32MemoryCardController.cpp  V32MemoryCardController.hpp  V32NullController.cpp  V32NullController.hpp  V32RNG.cpp  V32RNG.hpp  V32SPU.cpp  V32SPU.hpp  V32SPUWriters.cpp  V32Timer.cpp  V32Timer.hpp
DesktopEmulator/ControlsEditor/: Controls.cpp  Controls.hpp  GUI.cpp  GUI.hpp  Globals.cpp  Globals.hpp  Languages.cpp  Languages.hpp  LoadTexture.cpp  LoadTexture.hpp  Main.cpp  OpenGL2DContext.cpp  OpenGL2DContext.hpp
DesktopEmulator/Data/: Config-Controls.xml  Config-Settings.xml  Readme (Spanish).txt  Readme.txt
DesktopEmulator/Data/Bios/: StandardBios.v32
DesktopEmulator/DesktopInfrastructure/: CMakeLists.txt  Colors.cpp  Colors.hpp  Definitions.cpp  Definitions.hpp  EmulatorInterfaces.hpp  FilePaths.cpp  FilePaths.hpp  FileSignatures.cpp  FileSignatures.hpp  LogStream.cpp  LogStream.hpp  Logger.cpp  Logger.hpp  Matrix4D.cpp  Matrix4D.hpp  NumericFunctions.hpp  OpenGL2D.cpp  OpenGL2D.hpp  OpenGL2DContext.cpp  OpenGL2DContext.hpp  StopWatch.hpp  StringFunctions.cpp  StringFunctions.hpp  Texture.cpp  Texture.hpp  Vector2D.cpp  Vector2D.hpp  Video.cpp  Video.hpp
DesktopEmulator/EditControls/: Controls.hpp  GUI.cpp  GUI.hpp  Globals.hpp  Languages.cpp  Languages.hpp  Main.cpp
DesktopEmulator/Emulator/: AudioOutput.cpp  AudioOutput.hpp  AudioThread.cpp  EmulatorControl.cpp  EmulatorControl.hpp  GUI.cpp  GUI.hpp  GamepadsInput.cpp  GamepadsInput.hpp  Globals.cpp  Globals.hpp  Languages.cpp  Languages.hpp  Main.cpp  Savestates.cpp  Savestates.hpp  Settings.cpp  Settings.hpp  StopWatch.hpp  Texture.cpp  Texture.hpp  V32Buses.cpp  V32Buses.hpp  V32CPU.cpp  V32CPU.hpp  V32CPUProcessors.cpp  V32CartridgeController.cpp  V32CartridgeController.hpp  V32Emulator.cpp  V32Emulator.hpp  V32GPU.cpp  V32GPU.hpp  V32GPUWriters.cpp  V32GamepadController.cpp  V32GamepadController.hpp  V32Memory.cpp  V32Memory.hpp  V32MemoryCardController.cpp  V32MemoryCardController.hpp  V32NullController.cpp  (+34 more)
DesktopEmulator/Emulator/Documents/: Emulator architecture.pptx  Emulator compilation.pptx
DesktopEmulator/ExternalLibraries/: CMakeLists.txt
DevelopmentTools/: CMakeLists.txt
DevelopmentTools/Assembler/: ASMEmitFunctions.cpp  ASMEmitFunctions.hpp  ASTNodes.cpp  ASTNodes.hpp  DebugInfo.cpp  DebugInfo.hpp  Globals.cpp  Globals.hpp  Main.cpp  Readme.txt  SourceLocation.cpp  SourceLocation.hpp  Tokens.cpp  Tokens.hpp  VirconASMEmitter.cpp  VirconASMEmitter.hpp  VirconASMLexer.cpp  VirconASMLexer.hpp  VirconASMParser.cpp  VirconASMParser.hpp  VirconASMPreprocessor.cpp  VirconASMPreprocessor.hpp
DevelopmentTools/CCompiler/: CNodes.cpp  CNodes.hpp  CTokens.cpp  CTokens.hpp  CheckBinaryOperations.cpp  CheckBinaryOperations.hpp  CheckNodes.cpp  CheckNodes.hpp  CheckUnaryOperations.cpp  CheckUnaryOperations.hpp  CompilerInfrastructure.cpp  CompilerInfrastructure.hpp  DataTypes.cpp  DataTypes.hpp  DebugInfo.cpp  DebugInfo.hpp  EmitBinaryOperationNodes.cpp  EmitExpressionNodes.cpp  EmitNonExpressionNodes.cpp  EmitUnaryOperationNodes.cpp  Globals.cpp  Globals.hpp  Main.cpp  MemoryPlacement.cpp  MemoryPlacement.hpp  Operators.cpp  Operators.hpp  Readme.txt  RegisterAllocation.cpp  RegisterAllocation.hpp  SourceLocation.cpp  SourceLocation.hpp  StaticValue.cpp  StaticValue.hpp  VirconCAnalyzer.cpp  VirconCAnalyzer.hpp  VirconCEmitBinaryOps.cpp  VirconCEmitter.cpp  VirconCEmitter.hpp  VirconCLexer.cpp  (+5 more)
DevelopmentTools/Data/: Readme.txt
DevelopmentTools/DevToolsInfrastructure/: Definitions.cpp  Definitions.hpp  EnumStringConversions.cpp  EnumStringConversions.hpp  FilePaths.cpp  FilePaths.hpp  StringFunctions.cpp  StringFunctions.hpp
DevelopmentTools/Disassembler/: Globals.cpp  Globals.hpp  Main.cpp  OperandWriters.cpp  OperandWriters.hpp  VirconDisassembler.cpp  VirconDisassembler.hpp
DevelopmentTools/ExternalLibraries/: CMakeLists.txt
DevelopmentTools/PNG2Vircon/: Readme.txt  png2vircon.cpp  vircon2png.cpp
DevelopmentTools/PNGJoiner/: Globals.cpp  Globals.hpp  PNGImage.cpp  PNGImage.hpp  PNGJoiner.cpp  RectangleNode.cpp  RectangleNode.hpp
DevelopmentTools/RomPacker/: Main.cpp  Readme.txt  RomDefinition.cpp  RomDefinition.hpp
DevelopmentTools/RomUnpacker/: Main.cpp  RomDefinition.cpp  RomDefinition.hpp
DevelopmentTools/Tiled2Vircon/: Readme.txt  Tiled2Vircon.cpp
DevelopmentTools/WAV2Vircon/: Readme.txt  WavFormat.hpp  vircon2wav.cpp  wav2vircon.cpp
SimplifiedEmulator/: CMakeLists.txt  Readme.md
SimplifiedEmulator/Data/: Readme.txt
SimplifiedEmulator/Emulator/: AuxFunctions.hpp  Globals.cpp  Globals.hpp  Main.cpp  OpenGL2DContext.cpp  OpenGL2DContext.hpp  StopWatch.cpp  StopWatch.hpp  UserActions.cpp  UserActions.hpp  VirconBuses.cpp  VirconBuses.hpp  VirconCPU.cpp  VirconCPU.hpp  VirconCPUProcessors.cpp  VirconCartridgeController.cpp  VirconCartridgeController.hpp  VirconEmulator.cpp  VirconEmulator.hpp  VirconGPU.cpp  VirconGPU.hpp  VirconGPUWriters.cpp  VirconGamepadController.cpp  VirconGamepadController.hpp  VirconMemory.cpp  VirconMemoryCardController.cpp  VirconMemoryCardController.hpp  VirconNullController.hpp  VirconRNG.hpp  VirconSPU.cpp  VirconSPU.hpp  VirconSPUWriters.cpp  VirconTimer.cpp  VirconTimer.hpp
SimplifiedEmulator/ExternalLibraries/: CMakeLists.txt
SimplifiedEmulator/VirconDefinitions/: VirconDefinitions.hpp  VirconEnumerations.hpp  VirconROMFormat.cpp  VirconROMFormat.hpp
(+164 files in other folders)
